# vita-fnaf1

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.MD
.cache/clangd/index/: defines.hpp.CBF0377FAA06D50E.idx  file.cpp.52880555A7FD4546.idx  file.hpp.872C047CA090E189.idx  main.cpp.76850AD3A03A3CCD.idx  menu.cpp.66539324406CD630.idx  menu.hpp.C22D0E49D7136024.idx  shader.cpp.3944DD829D3215AC.idx  shader.hpp.7C145A48500BE6C7.idx  state.cpp.F214DB6691D33253.idx  state.hpp.5DBC1CD2AD21B1B8.idx  stb_image.h.0BEE64317B2B73E2.idx  texture.cpp.2280B9E2D4C6C08D.idx  texture.hpp.0758D556A723A2FA.idx  window.cpp.B29580C1065D713B.idx  window.hpp.DE8B19BE823B55CF.idx
.github/workflows/: b_ubuntu.yml  b_vita.yml  b_web.yml  b_windows.yml
assets/images/fonts/: consolas.csv  consolas_bold.csv  lcdsolid.csv  tahoma.csv
assets/presets/: main.toml  night.toml
assets/shaders/: bg.frag  mtsdf_default.frag  mtsdf_default.vert  texture_default.frag
assets/shaders/menu/: background.frag
assets/shaders/office/: background.frag  background.vert
cmake/: other_post.cmake  vita_post.cmake  vita_pre.cmake
inc/: appdata.hpp  main.hpp  menu.hpp  newspaper.hpp  night.hpp  nightloader.hpp  office.hpp
inc/assets/: main.hpp  nightloader.hpp
inc/core/: all.hpp  asset.hpp  assetmanager.hpp  audio.hpp  defines.hpp  delta.hpp  file.hpp  inputmanager.hpp  random.hpp  state.hpp  timer.hpp
inc/core/assets/: audio.hpp
inc/game/: main.hpp  main_loading.hpp  menu.hpp  newspaper.hpp  night.hpp  nightloader.hpp
inc/game/menu/: background.hpp  manager.hpp
inc/gl/: all.hpp  defines.hpp  mtsdffont.hpp  rendertexture.hpp  shader.hpp  texture.hpp  window.hpp
inc/gl/assets/: all.hpp  shader.hpp  texture.hpp  textureatlas.hpp
inc/gl/mtsdf/: all.hpp  font.hpp  text.hpp
inc/menu/: background.hpp  manager.hpp
inc/night/: call.hpp
inc/objects/: cursor.hpp
inc/objects/menu/: background.hpp  manager.hpp
inc/objects/office/: buttons.hpp  call.hpp
inc/office/: call.hpp
lib/: CMakeLists.txt  sdl3.cmake  stb_image.cmake  tomlplusplus.cmake
platform/vita/module/: _psp2_pvr_modules_here.md
platform/vita/sce_sys/livearea/contents/: template.xml
platform/web/: index.html
scripts/: compress.sh  image_merge_vertical.sh  image_resize.sh  resize.sh  resize_wide.sh
src/: entry.cpp  main.cpp  menu.cpp  newspaper.cpp  night.cpp  nightloader.cpp  office.cpp
src/core/: assetmanager.cpp  audio.cpp  delta.cpp  file.cpp  inputmanager.cpp  state.cpp  timer.cpp
src/core/assets/: audio.cpp
src/game/: main.cpp  main_loading.cpp  menu.cpp  newspaper.cpp  night.cpp  nightloader.cpp
src/game/menu/: background.cpp  manager.cpp
src/gl/: mtsdffont.cpp  rendertexture.cpp  shader.cpp  texture.cpp  window.cpp
src/gl/assets/: shader.cpp  texture.cpp  texturearray.cpp  textureatlas.cpp
src/gl/mtsdf/: font.cpp  text.cpp
src/menu/: background.cpp  manager.cpp
src/night/: call.cpp
src/objects/: cursor.cpp
src/objects/menu/: background.cpp  manager.cpp
src/objects/office/: buttons.cpp  call.cpp
src/office/: call.cpp
